# claude-plugins

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  install.sh
.claude-plugin/: marketplace.json  plugin.json
docker/: Dockerfile  README.md  entrypoint.sh
examples/: settings.json
git-hooks/: pre-commit  pre-push
hooks/: session-start.sh
plugins/claude-multiagent/: README.md
plugins/claude-multiagent/.claude-plugin/: plugin.json
plugins/claude-multiagent/docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  launch.sh
plugins/claude-multiagent/hooks/: claude-activity-hook.sh  hooks.json  session-start.sh
plugins/claude-multiagent/scripts/: bd-create-with-seq-id.sh  close-dashboard.sh  open-dashboard.sh  prepare-agent.sh  watch-agents.py  watch-agents.sh  watch-beads.py  watch-beads.sh  watch-deploys.py  watch-deploys.sh  watch-gh-actions.py
plugins/claude-multiagent/templates/: adr-template.md
plugins/claude-multiagent/zellij-plugins/zellij-attention/: Cargo.toml  build.sh
plugins/claude-multiagent/zellij-plugins/zellij-attention/src/: config.rs  lib.rs  main.rs  state.rs  tests.rs
plugins/dev-flow/.claude-plugin/: plugin.json
shell-configs/: CLAUDE.md  clauded-notify-bridge.sh
shell-configs/claude-status-line/: statusline.sh
shell-configs/kitty/: kitty.conf
shell-configs/nvim/: init.lua  lazy-lock.json
shell-configs/nvim/lua/: lazy_setup.lua
shell-configs/zellij/: config.kdl
shell-configs/zsh-functions/: CLAUDE.md  functions.zsh  zshrc
skills/coordinator-role/: SKILL.md
skills/dashboard/: SKILL.md
(+43 files in other folders)
